--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "savvy-starter",
   "version": "1.0.0",
   "description": "",
+  "type": "module",
   "scripts": {
+    "app:watch": "nodemon --watch ./server -e js ./server/app.js",
     "parcel-build": "parcel build index.html && cp _redirects ./dist/",
     "serve": "parcel index.html"
   },
@@ -10,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "buffer": "^6.0.3",
     "eslint": "^8.4.1",
     "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-prettier": "^3.3.1",
@@ -18,6 +21,8 @@
     "prettier": "1.19.1"
   },
   "dependencies": {
+    "axios": "^1.6.3",
+    "express": "^4.18.2",
     "lodash": "^4.17.21",
     "navigo": "^8.11.1",
     "parcel": "^2.10.3",
