--- a/package.json
+++ b/package.json
@@ -12,16 +12,25 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "browserify-zlib": "^0.2.0",
     "buffer": "^6.0.3",
     "eslint": "^8.4.1",
     "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-prettier": "^3.3.1",
+    "events": "^3.3.0",
     "html-literal": "^1.1.0",
+    "https-browserify": "^1.0.0",
     "node": "^16.13.1",
-    "prettier": "1.19.1"
+    "nodemon": "^3.0.2",
+    "prettier": "1.19.1",
+    "process": "^0.11.10",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
+    "url": "^0.11.3",
+    "util": "^0.12.5"
   },
   "dependencies": {
-    "axios": "^1.6.3",
+    "axios": "^1.6.4",
     "express": "^4.18.2",
     "lodash": "^4.17.21",
     "navigo": "^8.11.1",
