--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "axios": "^1.6.4",
     "express": "^4.18.2",
     "lodash": "^4.17.21",
+    "mongodb": "^6.3.0",
+    "mongoose": "^6.12.5",
     "navigo": "^8.11.1",
     "parcel": "^2.10.3",
     "yargs-parser": ">=13.1.2"
